Fix transition effect on menu items on tablet and smaller displays.

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -27,6 +27,37 @@
 			margin-bottom: 1rem;
 		}
 	}
+
+	ul.menu-nav,
+	div.menu-branding {
+		float: none;
+		width: 100%;
+		min-height: 0;
+
+		&.show {
+			// should animate from left and right on this screen size
+			transform: translate3d(0, 0, 0);
+		}
+	}
+
+		.menu-nav {
+			height: 75vh;
+			-webkit-transform: translate3d(-100%, 0, 0);
+			        transform: translate3d(-100%, 0, 0);
+			font-size: 24px;
+		}
+
+		.menu-branding {
+			height: 25vh;
+			-webkit-transform: translate3d(100%, 0, 0);
+			        transform: translate3d(100%, 0, 0);
+
+			.portrait {
+				background: url('../img/portrait_small.jpg');
+				width: 150px;
+				height: 150px;
+			}
+		}
 }
 
 //Smartphones
